changed name and size of #answered_badge. added a fix height and overflow scroll to allow for scrolling inside metadatum. trying to fix the a/button problem for MODIFICADO badge in legislation show.

--- a/app/assets/stylesheets/pages/_legislation.scss
+++ b/app/assets/stylesheets/pages/_legislation.scss
@@ -37,24 +37,25 @@
   font-size: 1.8rem
 }
 
-.popover:hover {
-  max-width: 1000px;
-}
-
-.popover-body:hover {
-  // font-size: 14px;
-
-  // ol {
-  //   padding-left: 18px;
-  // }
-}
-
-// #accordion .card {
-//   border-radius: 0rem;
-//   text-align: left;
-//   margin-top: 0rem;
-//   font-weight: lighter;
+// .popover:hover {
+//   max-width: 1000px;
+//   // font-size: 8px;
 // }
+
+// .popover-body:hover {
+//   // font-size: 14px;
+
+//   // ol {
+//   //   padding-left: 18px;
+//   // }
+// }
+
+// // #accordion .card {
+// //   border-radius: 0rem;
+// //   text-align: left;
+// //   margin-top: 0rem;
+// //   font-weight: lighter;
+// // }
 
 .badge li {
   font-size: 12px;
@@ -235,12 +236,15 @@
 }
 
 .popover{
-  max-width: 800px
+  max-width: 800px;
+  font-size: 14px;
+  max-height: 70vh;
+  overflow: auto
 }
 
 .badges {
   margin-top: 10px;
-  max-width: 100px
+  max-width: 160px
 }
 
 .margin-top-btm-25{
